// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Initial Form Data with "BOOM" 1`] = `
<div
  className="test"
>
  []
</div>
`;

exports[`Initial Form Data with "DEFAULT" 1`] = `
<div
  className="test"
>
  [
  "a",
  "b",
  "c"
]
</div>
`;
